--- a/Pendaftaran_Tenant/Views/Home/Index2.cshtml
+++ b/Pendaftaran_Tenant/Views/Home/Index2.cshtml
@@ -10,7 +10,7 @@
         <div class="thumbnail clearfix text-center">
             <span class="glyphicon glyphicon-book" style="font-size:50px"></span>
             <p style="font-size:15px">Lihat produk yang sudah terdaftar</p>
-            <p><a onclick="location.href='@Url.Action("IndexProduk", "Penyewa")'" class="btn btn-success btn-lg">Lihat Produk</a></p>
+            <p><a onclick="location.href='@Url.Action("IndexProdukBig", "Penyewa")'" class="btn btn-success btn-lg">Lihat Produk</a></p>
         </div>
     </div>
     <div class="col-md-4 col-xs-4">
