--- a/Pendaftaran_Tenant/Views/Penyewa/IndexProdukBig.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/IndexProdukBig.cshtml
@@ -4,28 +4,31 @@
     ViewBag.Title = "Daftar Produk";
 }
 
-<h2 class="text-center">Daftar Produk</h2>
+<h2 class="text-center" style="color:#47a447">D A F T A R     &nbsp;&nbsp; P R O D U K</h2>
 <hr />
 
-<div class="row">
+<div class="row text-center">
     @foreach (var item in Model)
     {
     <div class="col-md-4">
+
         <h3 style="text-align:center">@item.nama_produk</h3>
         <div class="thumbnail">
             <img src="~/Content/Images/@item.foto_produk" style="min-height:200px;height:200px;" />
         </div>
-        <table style="width:100%">
+        <table style="width:100%;float:none" class="text-center">
             <tr>
-                <th>Deskripsi</th>
+                <th style="text-align:center">DESKRIPSI</th>
+                
             </tr>
             <tr>
                 <td> @Html.DisplayFor(modelItem => item.deskripsi)</td>
             </tr>
         </table>
+        <hr />
         <p>
-            <input type="button" value="Edit" onclick="location.href='@Url.Action("EditProduk", "Penyewa")?id=' + @item.id_produk" class="btn btn-primary btn-sm" />
-            <input type="button" value="Delete" onclick="location.href='@Url.Action("DeleteProduk", "Penyewa")?id=' + @item.id_produk" class="btn btn-danger btn-sm" />
+            <input type="button" value="Ubah" onclick="location.href='@Url.Action("EditProduk", "Penyewa")?id=' + @item.id_produk" class="btn btn-primary btn-sm" />
+            <input type="button" value="Hapus" onclick="location.href='@Url.Action("DeleteProduk", "Penyewa")?id=' + @item.id_produk" class="btn btn-danger btn-sm" />
         </p>
         <p>
             <input type="button" value="Lihat Bahan" onclick="location.href='@Url.Action("IndexBahanBig", "Penyewa")?id=' + @item.id_produk" class="btn btn-warning btn-sm" />
