--- a/Pendaftaran_Tenant/Views/Penyewa/CreateProduk.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/CreateProduk.cshtml
@@ -31,7 +31,7 @@
         @using (Html.BeginForm("CreateProduk", "Penyewa", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form", enctype = "multipart/form-data" }))
         {
             @Html.AntiForgeryToken()
-            <h3 style="color:#47a447">Logo dan Warna Website</h3>
+            <h3 style="color:#47a447">Produk</h3>
             <hr />
             <table style="border:0 solid;float:none;margin:0 auto">
                 <tr><th style="text-align:center"><label for="namaproduk">Nama Produk</label></th></tr>
