--- a/Pendaftaran_Tenant/Views/Home/Index2.cshtml
+++ b/Pendaftaran_Tenant/Views/Home/Index2.cshtml
@@ -4,31 +4,41 @@
 
 
 <div class="jumbotron text-center">
-    <h1 style="font-family:Roboto"><b>SELAMAT DATANG </b><span style="font-family:'Compass LT';color:#47a447">@Session["nama_perusahaan"].ToString()</span></h1>
-    <hr />
-    <div class="col-md-4 col-xs-4">
-        <div class="thumbnail clearfix text-center">
-            <span class="glyphicon glyphicon-book" style="font-size:50px"></span>
-            <p style="font-size:15px">Lihat produk yang sudah terdaftar</p>
-            <p><a onclick="location.href='@Url.Action("IndexProdukBig", "Penyewa")'" class="btn btn-success btn-lg">Lihat Produk</a></p>
-        </div>
-    </div>
-    <div class="col-md-4 col-xs-4">
-        <div class="thumbnail clearfix text-center">
-            <span class="glyphicon glyphicon-certificate" style="font-size:50px"></span>
-            <p style="font-size:15px">Lihat bahan yang sudah terdaftar</p>
-            <p><a onclick="location.href='@Url.Action("IndexBahan", "Penyewa")'" class="btn btn-success btn-lg">Lihat Bahan</a></p>
+    @if (Session["role"].ToString() == "Penyewa")
+    {
+        <h1 style="font-family:Roboto"><b>SELAMAT DATANG </b><span style="font-family:'Compass LT';color:#47a447">@Session["nama_perusahaan"].ToString()</span></h1>
+        <hr />
 
+        <div class="col-md-4 col-xs-4">
+            <div class="thumbnail clearfix text-center">
+                <span class="glyphicon glyphicon-book" style="font-size:50px"></span>
+                <p style="font-size:15px">Lihat produk yang sudah terdaftar</p>
+                <p><a onclick="location.href='@Url.Action("IndexProdukBig", "Penyewa")'" class="btn btn-success btn-lg">Lihat Produk</a></p>
+            </div>
         </div>
-    </div>
-    <div class="col-md-4 col-xs-4">
-        <div class="thumbnail clearfix text-center">
-            <span class="glyphicon glyphicon-cog" style="font-size:50px"></span>
-            <p style="font-size:15px">Lihat jenis sablon yang sudah terdaftar</p>
-            <p><a onclick="location.href='@Url.Action("IndexJenisSablon", "Penyewa")'" class="btn btn-success btn-lg">Lihat Jenis Sablon</a></p>
+        <div class="col-md-4 col-xs-4">
+            <div class="thumbnail clearfix text-center">
+                <span class="glyphicon glyphicon-certificate" style="font-size:50px"></span>
+                <p style="font-size:15px">Lihat bahan yang sudah terdaftar</p>
+                <p><a onclick="location.href='@Url.Action("IndexBahan", "Penyewa")'" class="btn btn-success btn-lg">Lihat Bahan</a></p>
 
+            </div>
         </div>
-    </div>
+        <div class="col-md-4 col-xs-4">
+            <div class="thumbnail clearfix text-center">
+                <span class="glyphicon glyphicon-cog" style="font-size:50px"></span>
+                <p style="font-size:15px">Lihat jenis sablon yang sudah terdaftar</p>
+                <p><a onclick="location.href='@Url.Action("IndexJenisSablon", "Penyewa")'" class="btn btn-success btn-lg">Lihat Jenis Sablon</a></p>
+
+            </div>
+        </div>
+    }
+    else
+    {
+        <h1 style="font-family:Roboto"><b>SELAMAT DATANG </b><span style="font-family:'Compass LT';color:#47a447">Admin</span></h1>
+        <hr />
+    }
+
     @*<p class="lead">Daftarkan perusahaan sablon anda sekarang!</p>
         <p><a onclick="location.href='@Url.Action("Create", "Penyewa")'" class="btn btn-success btn-lg">Daftar</a></p>*@
 </div>
