--- a/Pendaftaran_Tenant/Views/Shared/_Layout.cshtml
+++ b/Pendaftaran_Tenant/Views/Shared/_Layout.cshtml
@@ -19,18 +19,27 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("MTS", "Index", "Home", new { area = "" }, new { @class = "navbar-brand", @style = "font-family:'Compass LT';color:#47a447;font-size:larger" })
+                @if (Session["role"] != null)
+                {
+                    @Html.ActionLink("MTS", "Index2", "Home", new { area = "" }, new { @class = "navbar-brand", @style = "font-family:'Compass LT';color:#47a447;font-size:larger" })
+
+                }
+                else
+                {
+                    @Html.ActionLink("MTS", "Index", "Home", new { area = "" }, new { @class = "navbar-brand", @style = "font-family:'Compass LT';color:#47a447;font-size:larger" })
+
+                }
             </div>
-            
+
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
 
                     @if ((string)Session["role"] == "Admin")
-                        {
-                           <li>@Html.ActionLink("List penyewa", "Index", "Penyewa")</li>
-                        }
+                    {
+                        <li>@Html.ActionLink("List penyewa", "Index", "Penyewa")</li>
+                    }
                     @*<li>@Html.ActionLink("Produk", "IndexProduk", "Penyewa")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
+                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -43,13 +52,13 @@
             <p>&copy; @DateTime.Now.Year - My Multi-Tenancy Application</p>
             <p><span class="glyphicon glyphicon-envelope" style="color:darkgrey"></span> : johanes.vincent@si.ukdw.ac.id</p>
             <p><span class="glyphicon glyphicon-phone-alt" style="color:darkgrey"></span>: 082135787830</p>
-            
+
         </footer>
     </div>
-    
-    
+
+
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
-   
+
 </body>
 </html>
