processing on karyawan

--- a/Pendaftaran_Tenant/Views/Penyewa/IndexBahanBig.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/IndexBahanBig.cshtml
@@ -32,7 +32,7 @@
                     </td>
                     <td>
                         @Html.ActionLink("Edit", "EditBahan", new { id = item.value.id_bahan, namabahan = item.value.nama_bahan }, new { @class = "btn btn-primary btn-sm" })
-                        <input type="button" value="Hapus" onclick="location.href='@Url.Action("DeleteProduk", "Penyewa")?id=' + @item.value.id_bahan" class="btn btn-danger btn-sm" />
+                        <input type="button" value="Hapus" onclick="location.href='@Url.Action("DeleteBahan", "Penyewa")?id=' + @item.value.id_bahan" class="btn btn-danger btn-sm" />
                     </td>
                 </tr>
             }
