--- a/Pendaftaran_Tenant/Views/Penyewa/CreateCarausel.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/CreateCarausel.cshtml
@@ -42,7 +42,7 @@
 
 
             <input type="submit" value="Create" class="btn btn-default" style="padding-bottom:5px"/><br />
-            <p style="padding-bottom:5px;margin-top:10px"> @Html.ActionLink("Lanjut ke penambahan produk", "CreateProduk", "Penyewa", null, new { onclick = "return confirm('Anda yakin sudah selesai mengisi carausel dan hendak melanjutkan ke pengisian produk?')", @class = "btn btn-warning btn-sm" })</p>
+            <p style="padding-bottom:5px;margin-top:10px"> @Html.ActionLink("Lanjut ke penambahan karyawan", "CreateKaryawan2", "Penyewa", null, new { onclick = "return confirm('Anda yakin sudah selesai mengisi carausel dan hendak melanjutkan ke pengisian Karyawan?')", @class = "btn btn-warning btn-sm" })</p>
             <br />
 
         }
