--- a/Pendaftaran_Tenant/Views/Shared/_Layout.cshtml
+++ b/Pendaftaran_Tenant/Views/Shared/_Layout.cshtml
@@ -48,12 +48,14 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer class="text-center">
-            <p>&copy; @DateTime.Now.Year - My Multi-Tenancy Application</p>
-            <p><span class="glyphicon glyphicon-envelope" style="color:darkgrey"></span> : johanes.vincent@si.ukdw.ac.id</p>
-            <p><span class="glyphicon glyphicon-phone-alt" style="color:darkgrey"></span>: 082135787830</p>
+        <div class="row">
+            <footer class="text-center">
+                <p>&copy; @DateTime.Now.Year - My Multi-Tenancy Application</p>
+                <p><span class="glyphicon glyphicon-envelope" style="color:darkgrey"></span> : johanes.vincent@si.ukdw.ac.id</p>
+                <p><span class="glyphicon glyphicon-phone-alt" style="color:darkgrey"></span>: 082135787830</p>
 
-        </footer>
+            </footer>
+        </div>
     </div>
 
 
